# Loreglide

./: .git-commit-msg.tmp  .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icons.ps1
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diffing.rs  lib.rs  main.rs  tts.rs  watcher.rs  watcher_macos.rs  watcher_windows.rs
