[package]
name = "loreglide"
version = "0.1.0"
description = "Typing-echo companion that speaks words and sentences as you write."
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "loreglide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
parking_lot = "0.12"
tts = "0.26"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
thiserror = "1"

# Windows accessibility (UI Automation)
[target.'cfg(windows)'.dependencies]
uiautomation = "0.16"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }

# macOS accessibility
[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.1"
accessibility-sys = "0.1"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
